--- a/snitch/css/theme.css
+++ b/snitch/css/theme.css
@@ -16,8 +16,8 @@ body {
 	color: #eee;
 	text-decoration: none;
 }
-#logs li .meta input,
-#logs li .meta textarea {
+#logs-wrapper input,
+#logs-wrapper textarea {
 	color: #ccc;
 	background: #333;
 	border: 1px solid #666;
