--- a/snitch/css/theme.css
+++ b/snitch/css/theme.css
@@ -12,7 +12,7 @@ body {
 	border: none;
 	background: #333;
 }
-#logs a {
+#logs-wrapper a {
 	color: #eee;
 	text-decoration: none;
 }
@@ -21,6 +21,16 @@ body {
 	color: #ccc;
 	background: #333;
 	border: 1px solid #666;
+}
+
+#logs-wrapper #target .action button {
+	background: transparent;
+	border: 1px solid #666;
+	color: #ccc;
+	padding: .5em 1em;
+}
+#logs-wrapper #target .action button:hover {
+	background: #333;
 }
 
 #out {
