--- a/snitch/css/theme.css
+++ b/snitch/css/theme.css
@@ -22,6 +22,9 @@ body {
 	background: #333;
 	border: 1px solid #666;
 }
+#logs-wrapper label {
+	opacity: .5;
+}
 
 #logs-wrapper #target .action button {
 	background: transparent;
@@ -31,6 +34,14 @@ body {
 }
 #logs-wrapper #target .action button:hover {
 	background: #333;
+}
+
+#logs li .meta-actions {
+	padding-top: 1em;
+	line-height: 16px;
+}
+#logs li h4 {
+	line-height: 16px;
 }
 
 #out {
@@ -67,6 +78,47 @@ body {
 }
 #addnew a[href="#additem"] span {
 	display: none;
+}
+
+#logs li:before {
+	font-family: icomoon;
+	content: '\ea42';
+	line-height: 16px;
+}
+#logs li.active:before {
+	font-family: icomoon;
+	content: '\ea43';
+	line-height: 16px;
+}
+
+#logs li .meta-actions a {
+	font-size: 16px;
+	opacity: .7;
+	margin-right: .5em;
+}
+#logs li a[href="#kill"] {
+	margin-right: 0;
+}
+#logs li .meta-actions a span {
+	display: none;
+}
+#logs li .meta-actions a:hover {
+	opacity: 1;
+}
+#logs li .meta-actions a:before {
+	font-family: icomoon;
+}
+#logs li a[href="#pause"]:before {
+	content: '\ea16';
+}
+#logs li a[href="#pause"].started:before {
+	content: '\ea15';
+}
+#logs li a[href="#clear"]:before {
+	content: '\ea54';
+}
+#logs li a[href="#kill"]:before {
+	content: '\ea0d';
 }
 
 /*
