Add postprocessing option.

--- a/snitch/css/logs.css
+++ b/snitch/css/logs.css
@@ -41,7 +41,9 @@
 }
 
 #logs-wrapper input,
-#logs-wrapper textarea {
+#logs-wrapper textarea,
+#logs-wrapper select
+{
 	width: 98%;
 	padding: .2em;
 }
