--- a/snitch/css/theme.css
+++ b/snitch/css/theme.css
@@ -17,7 +17,9 @@ body {
 	text-decoration: none;
 }
 #logs-wrapper input,
-#logs-wrapper textarea {
+#logs-wrapper textarea,
+#logs-wrapper select
+{
 	color: #ccc;
 	background: #333;
 	border: 1px solid #666;
